delete some sring

--- a/crnn_pytorch_ipynb_.ipynb
+++ b/crnn_pytorch_ipynb_.ipynb
@@ -77,9 +77,9 @@
       },
       "source": [
         "config = '''\n",
-        "DATA_DIR = \"/content/gdrive/My Drive/darknet/bin/darknet/bet_new\"\n",
-        "MODEL_SAVE_PATH = \"/content/gdrive/My Drive/darknet/bin/darknet/weights/bet_model.pth\"\n",
-        "LABEL_ENCODER_SAVE_PATH = \"/content/gdrive/My Drive/darknet/bin/darknet/weights/bet_classes.npy\"\n",
+        "DATA_DIR = \"\"\n",
+        "MODEL_SAVE_PATH = \"\"\n",
+        "LABEL_ENCODER_SAVE_PATH = \"\"\n",
         "BATCH_SIZE = 1\n",
         "IMAGE_WIDTH = 150\n",
         "IMAGE_HEIGHT = 38\n",
